--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load socialaccount %}
+<!-- load socialaccount -->
 <!doctype html>
 <html lang="ko">
 <head>
@@ -25,9 +25,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% provider_login_url 'google' %}"
-                        onclick="window.open(this.href, 'googleLogin', 'width=500,height=600'); return false;"
-                        >로그인</a>
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
+                        {% endif %}
+                    </li>
+                    <li>
+                        {% if not user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'common:signup' %}">회원가입</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
