--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-<!-- load socialaccount -->
 <!doctype html>
 <html lang="ko">
 <head>
@@ -8,68 +7,94 @@
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
     <title>Hello, sasacalendar</title>
 </head>
+<style>
+  #calendarOptions {
+    position: absolute;
+    top: 70px;   /* 네비게이션바 아래 간격 */
+    right: 20px; /* 오른쪽 여백 */
+    width: auto;
+    z-index: 1050;
+  }
+</style>
 <body>
 
-    <!-- 네비게이션바 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <div class="container-fluid">
-            
-          <a class="navbar-brand" href="{% url 'calendar:index' %}">Calendar</a>
-          <button class="navbar-toggler" type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation">
+<!-- 네비게이션바 -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <div class="container-fluid">
+
+        <a class="navbar-brand" href="{% url 'calendar:index' %}">Calendar</a>
+        <button class="navbar-toggler" type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-      
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    {% if user.is_authenticated %}
                         <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
-                        {% else %}
+                    {% else %}
                         <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
-                        {% endif %}
-                    </li>
-                    <li>
-                        {% if not user.is_authenticated %}
+                    {% endif %}
+                </li>
+                <li>
+                    {% if not user.is_authenticated %}
                         <a class="nav-link" href="{% url 'common:signup' %}">회원가입</a>
-                        {% endif %}
-              </li>
+                    {% endif %}
+                </li>
             </ul>
-      
-            <div class="d-flex align-items-center">
-              <button class="btn btn-outline-primary me-2" type="button">일정 추가</button>
-              <button class="btn btn-outline-primary me-2" type="button">일정 분류 추가</button>
-              <button class="btn btn-outline-primary me-2" type="button">일정 재배치</button>
-              <a class="btn btn-outline-secondary me-2" href="#">주간 보기 ▶</a>
-              <a class="btn btn-outline-secondary me-4" href="#">월간 보기 ▶</a>
-      
-              <div class="form-check form-check-inline me-2">
-                <input class="form-check-input" type="checkbox" id="showDone">
-                <label class="form-check-label" for="showDone">완료 일정 표시</label>
-              </div>
-              <div class="form-check form-check-inline me-2">
-                <input class="form-check-input" type="checkbox" id="showDeadline">
-                <label class="form-check-label" for="showDeadline">마감일 표시</label>
-              </div>
-              <div class="form-check form-check-inline me-4">
-                <input class="form-check-input" type="checkbox" id="showStart">
-                <label class="form-check-label" for="showStart">시행일 표시</label>
-              </div>
-      
-              <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="conditionSetting">
-                <label class="form-check-label ms-2" for="conditionSetting">컨디션 설정</label>
-              </div>
+
+            <div class="d-flex align-items-center flex-wrap">
+                <a class="btn btn-outline-primary me-2" href="{% url 'calendar:schedule_create' %}">일정 추가</a>
+                <button class="btn btn-outline-primary me-2" type="button">일정 분류 추가</button>
+                <button class="btn btn-outline-primary me-2" type="button">일정 재배치</button>
+                <a class="btn btn-outline-secondary me-2" href="#">주간 보기 ▶</a>
+                <a class="btn btn-outline-secondary me-2" href="#">월간 보기 ▶</a>
+
+                <!-- 옵션 펼치기 버튼 -->
+                <button class="btn btn-outline-dark me-2" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#calendarOptions" aria-expanded="false" aria-controls="calendarOptions">
+                    옵션 펼치기 / 접기
+                </button>
             </div>
-          </div>
         </div>
-      </nav>
-      
-    {% block content %}
-    {% endblock %}
+    </div>
+</nav>
+
+<!-- 옵션 영역 (navbar 아래에 위치) -->
+<div class="collapse" id="calendarOptions">
+  <div class="container">
+    <div class="d-flex align-items-center flex-wrap gap-3 p-3 border rounded bg-light shadow">
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="showDone">
+        <label class="form-check-label" for="showDone">완료 일정 표시</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="showDeadline">
+        <label class="form-check-label" for="showDeadline">마감일 표시</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="showStart">
+        <label class="form-check-label" for="showStart">시행일 표시</label>
+      </div>
+      <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="conditionSetting">
+        <label class="form-check-label ms-2" for="conditionSetting">컨디션 설정</label>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- 페이지 콘텐츠 -->
+{% block content %}
+{% endblock %}
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
