--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -52,9 +52,9 @@
                 <a class="btn btn-outline-primary me-2" href="{% url 'calendar:schedule_create' %}">일정 추가</a>
                 <button class="btn btn-outline-primary me-2" type="button">일정 분류 추가</button>
                 <button class="btn btn-outline-primary me-2" type="button">일정 재배치</button>
-                <a class="btn btn-outline-secondary me-2" href="#">주간 보기 ▶</a>
-                <a class="btn btn-outline-secondary me-2" href="#">월간 보기 ▶</a>
-
+                <a class="btn btn-outline-secondary me-2" href="#">주간 보기</a>
+                <a class="btn btn-outline-secondary me-2" href="#">월간 보기</a>
+                <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:schedule_list' %}">일정 목록</a>
                 <!-- 옵션 펼치기 버튼 -->
                 <button class="btn btn-outline-dark me-2" type="button" data-bs-toggle="collapse"
                         data-bs-target="#calendarOptions" aria-expanded="false" aria-controls="calendarOptions">
