--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -93,7 +93,12 @@
 {% block content %}
 {% endblock %}
 
-<!-- Bootstrap JS -->
+<script>
+  window.scheduleData = JSON.parse('{{ schedule_json|safe }}');
+  window.currentUserId = JSON.parse('{{ user_id|default:"null" }}');
+</script>
+
+<script src="{% static 'calendar_list.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
