--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -50,7 +50,7 @@
 
             <div class="d-flex align-items-center flex-wrap">
                 <a class="btn btn-outline-primary me-2" href="{% url 'calendar:schedule_create' %}">일정 추가</a>
-                <button class="btn btn-outline-primary me-2" type="button">일정 분류 추가</button>
+                <a href="{% url 'calendar:schedule_type_list' %}" class="btn btn-outline-primary me-2">분류 관리</a>
                 <button class="btn btn-outline-primary me-2" type="button">일정 재배치</button>
                 <a class="btn btn-outline-secondary me-2" href="#">주간 보기</a>
                 <a class="btn btn-outline-secondary me-2" href="#">월간 보기</a>
