--- a/webproject/mysite/templates/calendar/schedule_list.html
+++ b/webproject/mysite/templates/calendar/schedule_list.html
@@ -71,6 +71,7 @@
           {% endfor %}
         </tr>
         {% endfor %}
+        <!-- 일정 리스트 모달 -->
         <div class="modal fade" id="scheduleModal" tabindex="-1" aria-labelledby="scheduleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
