--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <title>Hello, sasacalendar</title>
+    <title>SASA Calendar</title>
 </head>
 <style>
   #calendarOptions {
@@ -58,7 +58,7 @@
                 <!-- 옵션 펼치기 버튼 -->
                 <button class="btn btn-outline-dark me-2" type="button" data-bs-toggle="collapse"
                         data-bs-target="#calendarOptions" aria-expanded="false" aria-controls="calendarOptions">
-                    옵션 펼치기 / 접기
+                    옵션
                 </button>
             </div>
         </div>
@@ -70,15 +70,15 @@
   <div class="container">
     <div class="d-flex align-items-center flex-wrap gap-3 p-3 border rounded bg-light shadow">
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="showDone">
+        <input class="form-check-input" type="checkbox" id="showDone" checked>
         <label class="form-check-label" for="showDone">완료 일정 표시</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="showDeadline">
+        <input class="form-check-input" type="checkbox" id="showDeadline" checked>
         <label class="form-check-label" for="showDeadline">마감일 표시</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="showStart">
+        <input class="form-check-input" type="checkbox" id="showStart" checked>
         <label class="form-check-label" for="showStart">시행일 표시</label>
       </div>
       <div class="form-check form-switch">
@@ -90,15 +90,16 @@
 </div>
 
 <!-- 페이지 콘텐츠 -->
-{% block content %}
-{% endblock %}
-
 <script>
   window.currentUserId = {{ user_id|default:"null" }};
   window.scheduleData = {{ schedule_json|safe|default:"null" }};
+  console.log("✅ scheduleData =", window.scheduleData);
 </script>
-<script src="{% static 'calendar_list.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+{% block content %}
+{% endblock %}
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'keyboard.js' %}"></script>
 </body>
 </html>
