--- a/webproject/mysite/templates/calendar/schedule_week.html
+++ b/webproject/mysite/templates/calendar/schedule_week.html
@@ -48,8 +48,9 @@
               <p><strong>시험 여부:</strong> <span id="detailExam"></span></p>
             </div>
             <div class="modal-footer">
-              <a href="#" id="editTaskLink" class="btn btn-primary d-none">수정</a>
+              <a href="#" id="editTaskLink" class="btn btn-primary">수정</a>
               <button type="button" class="btn btn-success" id="markDoneBtn">완료</button>
+              <button type="button" class="btn btn-warning d-none" id="unmarkDoneBtn">미완료</button>
             </div>
           </div>
         </div>
