--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -93,7 +93,6 @@
 <script>
   window.currentUserId = {{ user_id|default:"null" }};
   window.scheduleData = {{ schedule_json|safe|default:"null" }};
-  console.log("✅ scheduleData =", window.scheduleData);
 </script>
 
 {% block content %}
@@ -101,5 +100,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{% static 'keyboard.js' %}"></script>
+<script src="{% static 'base.js' %}"></script>
 </body>
 </html>
