--- a/webproject/mysite/templates/calendar/schedule_replace.html
+++ b/webproject/mysite/templates/calendar/schedule_replace.html
@@ -3,7 +3,7 @@
 <div class="container py-4">
   <h2 class="mb-4">재배치 일정 선택</h2>
 
-  <form method="post" action="{% url 'calendar:index' %}">
+  <form method="post" action="{% url 'calendar:ai_run' %}">
     {% csrf_token %}
     <table class="table table-hover align-middle">
       <thead class="table-light">
