--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -52,7 +52,6 @@
                 <a class="btn btn-outline-primary me-2" href="{% url 'calendar:schedule_replace'%}">AI 일정 재배치</a>
                 <a class="btn btn-outline-primary me-2" href="{% url 'calendar:schedule_create' %}">일정 추가</a>
                 <a href="{% url 'calendar:schedule_type_list' %}" class="btn btn-outline-primary me-2">분류 관리</a>
-                <button class="btn btn-outline-primary me-2" type="button">일정 재배치</button>
                 <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:schedule_week' %}">주간 보기</a>
                 <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:index' %}">월간 보기</a>
                 <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:schedule_list' %}">일정 목록</a>
@@ -96,6 +95,7 @@
   window.scheduleData = {{ schedule_json|safe|default:"null" }};
   window.AIscheduleData = {{ ai_suggestions|safe|default:"null"}};
   window.exeptions = {{hide_ids|default:"null"}};
+  window.hasAISession = {{ has_ai_session|yesno:"true,false" }};
 </script>
 
 {% block content %}
