--- a/webproject/mysite/templates/calendar/schedule_week.html
+++ b/webproject/mysite/templates/calendar/schedule_week.html
@@ -4,9 +4,29 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center my-3">
-  <a class="btn btn-outline-secondary mx-1" href="?date={{ prev_date }}">◀</a>
-  <h4 class="mb-0">{{ days.0|date:"Y년 m월 d일" }} ~ {{ days.6|date:"m월 d일" }}</h4>
-  <a class="btn btn-outline-secondary mx-1" href="?date={{ next_date }}">▶</a>
+  <h3 class="mb-0 mx-4">{{ days.0|date:"Y년 m월 d일" }} ~ {{ days.6|date:"m월 d일" }}</h3>
+  
+  {% if has_ai_session %}
+    <div class="d-flex flex-row align-items-center ms-4">
+      <h2 class="mb-0 text-black mx-4">AI 일정 재배치</h2>
+      <div>
+        <form method="post" action="{% url 'calendar:ai_confirm' %}" class="d-inline">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-success btn-sm me-2">확정</button>
+        </form>
+        <form method="post" action="{% url 'calendar:ai_cancel' %}" class="d-inline">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-outline-danger btn-sm">취소</button>
+        </form>
+      </div>
+    </div>
+  {% endif %}
+
+  <div>
+    <a class="btn btn-outline-secondary mx-1" href="?date={{ prev_date }}">◀</a>
+    <a class="btn btn-outline-secondary mx-1" href="?date={{ next_date }}">▶</a>
+
+  </div>
 </div>
 
 <table class="table table-bordered text-center" style="table-layout: fixed; width: 100%;">
@@ -47,7 +67,7 @@
               <p><strong>고정 일정:</strong> <span id="detailFixed"></span></p>
               <p><strong>시험 여부:</strong> <span id="detailExam"></span></p>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer" id="editbuttons">
               <a href="#" id="editTaskLink" class="btn btn-primary">수정</a>
               <button type="button" class="btn btn-success" id="markDoneBtn">완료</button>
               <button type="button" class="btn btn-warning d-none" id="unmarkDoneBtn">미완료</button>
